...
import br.com.rbrthmn.operations.R
import br.com.rbrthmn.ui.R as uiR

const val ACCOUNTS_DROPDOWN_MENU_TAG = "accounts_dropdown_menu"
const val ACCOUNTS_DROPDOWN_ICON_TAG = "accounts_dropdown_icon"
const val ACCOUNTS_DROPDOWN_MENU_ITEM_TAG = "accounts_dropdown_menu_item"
const val ADD_SIMPLE_ACCOUNT_DIALOG_TAG = "add_simple_account_dialog"

@Composable
fun AccountsDropdownMenu(
    modifier: Modifier = Modifier,
    operationAccountType: OperationAccountType,
    onAccountSelected: (String) -> Unit,
...
