...
import br.com.rbrthmn.ui.utils.valueWithCurrencyString
import kotlinx.coroutines.flow.flowOf
import java.time.LocalDate
import java.time.format.DateTimeFormatter
import br.com.rbrthmn.ui.R as uiR

const val NEW_OPERATION_DIALOG_TAG = "new_operation_dialog"
const val OPERATION_TYPES_DROPDOWN_MENU_TAG = "operation_types_dropdown_menu"

@Composable
fun OperationsListCard(
    modifier: Modifier = Modifier,
    viewModel: OperationsScreenContract.ViewModel
) {
...
